Fix navigation bar spacing

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -75,7 +75,7 @@ html {
   font-size: 0.9rem;
   display: inline-flex;
   justify-content: center;
-  margin: 0rem 0.2rem 0rem 0rem;
+  margin: 0rem 0.3rem 0rem 0rem;
 }
 
 .date {
